--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
             <uses-permission android:name="android.permission.INTERNET" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+            <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
         </config-file>
 
         <source-file src="src/android" target-dir="src/com/vaenow/appupdate"/>
